modify progress css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
     <script src="static/js/script.js"></script>
+
+
+    <style>
+       progress {
+       	width: 160px;
+       	height: 20px;
+       	border: 1px solid #0064B4;
+       	background-color:#e6e6e6;
+       	color: #0064B4; /*IE10*/
+       }
+
+   progress::-moz-progress-bar { background: red; }
+   progress::-webkit-progress-bar { background: #eee; }
+   progress::-webkit-progress-value  { background: #4682B4; }
+   </style>
+
 </head>
 
 <body>
