--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
     <script src="static/js/script.js"></script>
 
+    <script language="javascript">
+      function changeColor(){
+      var color="#f00|#0f0|#00f|#880|#808|#088|yellow|green|blue|gray";
+      color=color.split("|");
+      document.getElementById("blink").style.color=color[parseInt(Math.random() * color.length)];
+      }
+      setInterval("changeColor()",200);
+    </script>
 
     <style>
        progress {
@@ -21,9 +29,9 @@
        	color: #0064B4; /*IE10*/
        }
 
-   progress::-moz-progress-bar { background: red; }
-   progress::-webkit-progress-bar { background: #eee; }
-   progress::-webkit-progress-value  { background: #4682B4; }
+   progress::-moz-progress-bar { background: #191970 ; }
+   progress::-webkit-progress-bar { background: #191970; }
+   progress::-webkit-progress-value  { background: #191970; }
    </style>
 
 </head>
@@ -32,7 +40,7 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait"></div>
+                <!-- <div class="portrait"></div> -->
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
                     <h3>请输入图片URL地址：</h3>
                     <br/>
@@ -49,11 +57,15 @@
                     <li>
                         <label class="left-label">姓名</label><span class="label-value">谭炳健</span></li>
                     <li>
+                        <label class="left-label">民族</label><span class="label-value">毛南族</span></li>
+                    <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
                         <label class="left-label">毕业院校</label><span class="label-value">桂林电子科技大学</span></li>
                     <li>
                         <label class="left-label">毕业年份</label><span class="label-value">2015</span></li>
+                    <li>
+                        <label class="left-label">求职意向</label><span class="label-value">Java开发工程师<br />Python开发工程师<br />数据库开发工程师</span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -79,29 +91,49 @@
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">database</label>
+                        <label class="left-label">数据库</label>
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">Python</label>
                         <progress value="50" max="100"></progress>
                     </li>
+                    <li>
+                        <label class="left-label">Linux</label>
+                        <progress value="50" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">C/C++</label>
+                        <progress value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">C#</label>
+                        <progress value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">JavaScript</label>
+                        <progress value="30" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">html/css</label>
+                        <progress value="30" max="100"></progress>
+                    </li>
                 </ul>
             </div>
-            <div class="stack info-unit">
+            <!-- <div class="stack info-unit">
                 <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">javalite,sparkjava</span></li>
-                        <label class="left-label">数据库</label><span class="label-value">oracle,mysql,mssqlserver</span></li>
-                        <label class="left-label">     </label><span class="label-value">DB2,达梦，金仓</span></li>
+                      <label class="left-label">后端</label><span class="label-value">Java &nbsp;Javalite &nbsp;SparkJava &nbsp;Python </span></li>
+                        <label class="left-label">数据库</label><span class="label-value">oracle &nbsp;mysql &nbsp;<br />mssqlserver&nbsp;DB2 </span></li>
+                        <label class="left-label">     </label><span class="label-value">达梦 &nbsp;金仓</span></li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">Python,html,javascript</span></li>
+                        <label class="left-label">其它</label><span class="label-value">html &nbsp;javascript</span></li>
                     </li>
                 </ul>
-            </div>
+            </div> -->
 
             <div class="code info-unit">
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
@@ -111,12 +143,12 @@
 
                 </div>
             </div>
-            <div class="remodal remodal-img" data-remodal-id="weixin-modal">
+            <!-- <div class="remodal remodal-img" data-remodal-id="weixin-modal">
                 <h3>请输入图片URL地址：</h3>
                 <br/>
                 <input type="text" id="weixin-url">
                 <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-            </div>
+            </div> -->
         </div>
         <div class="main">
             <div class="education info-unit right-list">
@@ -134,13 +166,9 @@
                 <ul class="experience-list">
                     <li>
                         <h3>桂林先河信息技术有限责任公司－实习生（实习）2014.5-2015.5</h3>
-                        <p>桂林市林业局防火救援系统：负责需求分析，原系统数据转移，部分代码编写</p>
-                        <p>桂林市国家税务局固定资产管理系统：在其原平台上开发固定资产盘点数据分析功能以及RFID手持设备写卡读卡盘点等功能</p>
                     </li>
                     <li>
                         <h3>北京懋光信安技术有限公司 （软件工程师）2015.7-至今</h3>
-                        <p>数据单项传输系统：负责文件状态监控，文件安全检查（文件名，文件内容黑白名单，文件密级，文件标签，文件类型，文件大小，
-                          文件修改时间，病毒），文件发送与组装，数据库表监控，数据库安全检查（字段黑白名单，病毒），记录发生与组装。</p>
                     </li>
                 </ul class="experience-list">
             </div>
@@ -149,22 +177,81 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>单项消息传送系统</h3>
-                        <p>
-                           <!-- TODO:  -->
-                            <br/>
-                        </p>
+                      <p style="color:black;font-size:20px;">
+                        <strong>XX市林业局防火救援系统：</strong><br />
+                      </p>
+                      <p style="color:black;font-size:20px;">
+                        &nbsp; &nbsp;负责需求分析，原系统数据转移，部分代码编写。
+                      </p>
+                    </li>
+                    <li>
+                      <p style="color:black;font-size:20px;">
+                        <strong>XX市国家税务局固定资产管理系统：</strong><br />
+                      </p>
+                      <p style="color:black;font-size:20px;">
+                        &nbsp; &nbsp;在其原平台上开发固定资产盘点数据分析以及RFID手持设备写卡读卡盘点等功能。
+                      </p>
+                    </li>
+                    <li>
+                      <p style="color:black;font-size:20px;">
+                        <strong>XX市公交视频监控系统：</strong><br />
+                      </p>
+                      <p style="color:black;font-size:18px;">
+                        &nbsp; &nbsp;主要负责向客户演示并讲解该系统各项功能。
+                      </p>
+                    </li>
+                    <li>
+                      <p style="color:black;font-size:20px;">
+                        <strong>公务车辆实时监控系统：</strong><br />
+                      </p>
+                      <p style="color:black;font-size:18px;">
+                        &nbsp; &nbsp;负责后台接收车辆实时位置信息上报处理API以及向客户演示讲解系统。
+                      </p>
+                    </li>
+                    <li>
+                      <p style="color:black;font-size:20px;">
+                        <strong>数据单项传输系统：</strong><br />
+                      </p>
+                      <p style="color:black;font-size:18px;">
+                         &nbsp; &nbsp;负责核心业务开发：<br />
+                         &nbsp; &nbsp;1、文件传输：文件状态监控，文件安全检查（文件名，文件内容黑白名单，<br />
+                         &nbsp; &nbsp;文件密级，文件标签，文件类型，文件大小，文件修改时间，病毒）,文件<br />
+                         &nbsp; &nbsp;发送与组装。<br />
+                         &nbsp; &nbsp;2、数据库传输：数据库表监控，数据库安全检查（字段黑白名单，病毒），<br />
+                         &nbsp; &nbsp;记录发生与组装，支持的数据库有（oracle，mysql，DB2，<br />
+                         &nbsp; &nbsp;mssqlserver，以及国产的达梦数据库和金仓数据库）。
+                      </p>
+                    </li>
+                    <li>
+                      <p style="color:black;font-size:20px;">
+                      <strong>北斗导航终端测试系统：</strong><br />
+                      </p>
+                        <p style="color:black;font-size:18px;">
+                         &nbsp; &nbsp;负责WEB管理系统后台API开发，以及大部分测试系统测试数据<br />
+                          &nbsp; &nbsp;封装下发至终端以及解析终端反馈的参数信息。
+                       </p>
                     </li>
                 </ul>
             </div>
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
-                <p>
-                   <!-- TODO:  -->
+                <p style="color:black;font-size:20px;">
+                  &nbsp; &nbsp;1、熟练掌握linux,具有长期在linux下开发的经验；<br />
+                  &nbsp; &nbsp;2、熟悉多种数据库开发。<br />
+                  &nbsp; &nbsp;3、有前后台开发和设计经验，能够自行设计或独立开发整套系统。<br />
+                  &nbsp; &nbsp;4、熟悉多种开发语言，并且都能狗在短时间直接参与项目开发。<br />
+                  &nbsp; &nbsp;5、熟悉办公软件个各种常规操作。<br />
                 </p>
             </div>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <div style="color:black;font-size:30px;" id="blink">&nbsp; &nbsp;感谢您抽空阅读我的简历，祝您工作愉快！</div>
         </div>
+    </div>
     </div>
 </body>
 
