--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="me">
                 <!-- <div class="portrait"></div> -->
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>请输入图片URL地址：</h3>
-                    <br/>
+                    <!-- <h3>请输入图片URL地址：</h3>
+                    <br/> -->
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
@@ -58,6 +58,8 @@
                         <label class="left-label">姓名</label><span class="label-value">谭炳健</span></li>
                     <li>
                         <label class="left-label">民族</label><span class="label-value">毛南族</span></li>
+                    <li>
+                        <label class="left-label">籍贯</label><span class="label-value">广西河池</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
@@ -244,7 +246,6 @@
                   &nbsp; &nbsp;5、熟悉办公软件个各种常规操作。<br />
                 </p>
             </div>
-            <br />
             <br />
             <br />
             <br />
