--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        }
 
    progress::-moz-progress-bar { background: #191970 ; }
-   progress::-webkit-progress-bar { background: #191970; }
+   progress::-webkit-progress-bar { background: #FFFFF4; }
    progress::-webkit-progress-value  { background: #191970; }
    </style>
 
