移除感谢语

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <br />
             <br />
             <br />
-            <div style="color:black;font-size:30px;" id="blink">&nbsp; &nbsp;感谢您抽空阅读我的简历，祝您工作愉快！</div>
+            <!-- <div style="color:black;font-size:30px;" id="blink">&nbsp; &nbsp;感谢您抽空阅读我的简历，祝您工作愉快！</div> -->
         </div>
     </div>
     </div>
