修改技能评价

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
                 <h1 id="username" >Teclan</h1>
-                <h4 id="persona-tag" >Java / Python </h4>
+                <h4 id="persona-tag" >Java / 数据库 </h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
@@ -97,12 +97,8 @@
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">Python</label>
-                        <progress value="50" max="100"></progress>
-                    </li>
-                    <li>
                         <label class="left-label">Linux</label>
-                        <progress value="50" max="100"></progress>
+                        <progress value="60" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">C/C++</label>
@@ -113,7 +109,15 @@
                         <progress value="40" max="100"></progress>
                     </li>
                     <li>
+                        <label class="left-label">Python</label>
+                        <progress value="30" max="100"></progress>
+                    </li>
+                    <li>
                         <label class="left-label">JavaScript</label>
+                        <progress value="30" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">AngulaJS</label>
                         <progress value="30" max="100"></progress>
                     </li>
                     <li>
@@ -239,9 +243,10 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p style="color:black;font-size:20px;">
-                  &nbsp; &nbsp;1、熟练掌握linux,具有长期在linux下开发的经验；<br />
+                  &nbsp; &nbsp;1、熟练掌握Linux,具有长期在Linux下开发的经验；<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发。<br />
-                  &nbsp; &nbsp;3、熟悉 Git,Maven,Mina,对 Spring 也有一定的了解。<br />
+                  &nbsp; &nbsp;3、熟悉 Git版本控制,Maven 项目管理以及Mina,sparkjava,ActiveJDBC等框架；<br />
+                  &nbsp; &nbsp;&nbsp;会使用 Spring，Tomcat，Jetty等，前端熟悉 AngulaJS。<br />
                   &nbsp; &nbsp;4、有前后台开发和设计经验，能够自行设计或独立开发整套系统。<br />
                   &nbsp; &nbsp;5、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
                   &nbsp; &nbsp;6、熟悉办公软件个各种常规操作。<br />
