--- a/index.html
+++ b/index.html
@@ -246,8 +246,10 @@
                   &nbsp; &nbsp;1、熟练掌握Linux,具有长期在Linux下开发的经验；<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发。<br />
                   &nbsp; &nbsp;3、熟悉 Git版本控制,Maven 项目管理以及Mina,<br />
-                  &nbsp; &nbsp;&nbsp;&nbsp;sparkjava,ActiveJDBC等框架；<br />
-                  &nbsp; &nbsp;&nbsp;&nbsp;会使用 Spring，Tomcat，Jetty等，前端熟悉 AngularJS。<br />
+                  &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                  sparkjava,ActiveJDBC等框架；会使用 Spring，
+                  &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                  Tomcat，Jetty等，前端熟悉 AngularJS。<br />
                   &nbsp; &nbsp;4、有前后台开发和设计经验，能够自行设计或独立开发整套系统。<br />
                   &nbsp; &nbsp;5、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
                   &nbsp; &nbsp;6、熟悉办公软件个各种常规操作。<br />
