--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
                 <p style="color:black;font-size:20px;">
                   &nbsp; &nbsp;1、熟练掌握Linux,具有长期在Linux下开发的经验；<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发。<br />
-                  &nbsp; &nbsp;3、熟悉Git,Maven,Mina,sparkjava,ActiveJDBC,Spring，Tomcat，Jetty等。<br />
+                  &nbsp; &nbsp;3、熟悉Git,Maven,Mina,sparkjava,ActiveJDBC,Spring，Tomcat，</br />
+                  &nbsp; &nbsp;Jetty,AngularJS等。<br />
                   &nbsp; &nbsp;4、有前后台开发和设计经验，能够自行设计或独立开发整套系统。<br />
                   &nbsp; &nbsp;5、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
                   &nbsp; &nbsp;6、熟悉办公软件个各种常规操作。<br />
