--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li>
                         <label class="left-label">政治面貌</label><span class="label-value">中国党员</span></li>
                     <li>
-                        <label class="left-label">求职意向</label><span class="label-value">Java开发工程师<br />Python开发工程师<br />数据库开发工程师</span></li>
+                        <label class="left-label">求职意向</label><span class="label-value">Java开发工程师<br />数据库开发工程师<br />Python开发工程师</span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -75,7 +75,7 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">18513417469</span></li>
+                        <label class="left-label">手机</label><span class="label-value">18777853350</span></li>
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">tbj621@163.com</span></li>
                     <li>
@@ -118,6 +118,10 @@
                     </li>
                     <li>
                         <label class="left-label">html/css</label>
+                        <progress value="30" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">angularjs</label>
                         <progress value="30" max="100"></progress>
                     </li>
                 </ul>
@@ -243,9 +247,8 @@
                   &nbsp; &nbsp;2、熟悉多种数据库开发。<br />
                   &nbsp; &nbsp;3、熟悉Git,Maven,Mina,sparkjava,ActiveJDBC,Spring，Tomcat，</br />
                   &nbsp; &nbsp;Jetty等。<br />
-                  &nbsp; &nbsp;4、有前后台开发和设计经验，能够自行设计或独立开发整套系统。<br />
-                  &nbsp; &nbsp;5、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
-                  &nbsp; &nbsp;6、熟悉办公软件个各种常规操作。<br />
+                  &nbsp; &nbsp;4、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
+                  &nbsp; &nbsp;5、熟悉办公软件个各种常规操作。<br />
                 </p>
             </div>
             <br />
