--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li>
                         <label class="left-label">政治面貌</label><span class="label-value">中国党员</span></li>
                     <li>
-                        <label class="left-label">求职意向</label><span class="label-value">Java开发工程师<br />数据库开发工程师<br />Python开发工程师</span></li>
+                        <label class="left-label">求职意向</label><span class="label-value">Java开发工程师<br />数据库开发工程师<br /></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -245,8 +245,8 @@
                 <p style="color:black;font-size:20px;">
                   &nbsp; &nbsp;1、熟练掌握Linux,具有长期在Linux下开发的经验；<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发。<br />
-                  &nbsp; &nbsp;3、熟悉Git,Maven,Mina,sparkjava,ActiveJDBC,Spring，Tomcat，</br />
-                  &nbsp; &nbsp;Jetty等。<br />
+                  &nbsp; &nbsp;3、熟悉Git,Maven,Mina,sparkjava,ActiveJDBC,了解Tomcat，</br />
+                  &nbsp; &nbsp;Jetty常见配置等。<br />
                   &nbsp; &nbsp;4、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
                   &nbsp; &nbsp;5、熟悉办公软件个各种常规操作。<br />
                 </p>
