修改简历内容多处错误

--- a/static/image/index.html
+++ b/static/image/index.html
@@ -187,7 +187,7 @@
                         <strong>XX市林业局防火救援系统：</strong><br />
                       </p>
                       <p style="color:black;font-size:20px;">
-                        &nbsp;负责需求分析，原系统数据转移，部分代码编写。
+                        &nbsp; &nbsp;负责需求分析，原系统数据转移，部分代码编写。
                       </p>
                     </li>
                     <li>
@@ -195,7 +195,7 @@
                         <strong>XX市国家税务局固定资产管理系统：</strong><br />
                       </p>
                       <p style="color:black;font-size:20px;">
-                        &nbsp;在其原平台上开发固定资产盘点数据分析以及RFID手持设备写卡读卡盘点等功能。
+                        &nbsp; &nbsp;在其原平台上开发固定资产盘点数据分析以及RFID手持设备写卡读卡盘点等功能。
                       </p>
                     </li>
                     <li>
@@ -203,7 +203,7 @@
                         <strong>XX市公交视频监控系统：</strong><br />
                       </p>
                       <p style="color:black;font-size:18px;">
-                        主要负责向客户演示并讲解该系统各项功能。
+                        &nbsp; &nbsp;主要负责向客户演示并讲解该系统各项功能。
                       </p>
                     </li>
                     <li>
@@ -211,7 +211,7 @@
                         <strong>公务车辆实时监控系统：</strong><br />
                       </p>
                       <p style="color:black;font-size:18px;">
-                        负责后台接收车辆实时位置信息上报处理API以及电子围栏功能。
+                        &nbsp; &nbsp;&nbsp;负责后台接收车辆实时位置信息上报处理API以及电子围栏功能。
                       </p>
                     </li>
                     <li>
@@ -233,8 +233,8 @@
                       <strong>北斗导航终端测试系统：</strong><br />
                       </p>
                         <p style="color:black;font-size:18px;">
-                        负责WEB管理系统后台API开发，以及大部分测试系统测试数据封装下发至<br />
-                        终端以及解析终端反馈的参数信息。
+                        &nbsp; &nbsp;&nbsp; &nbsp;负责WEB管理系统后台API开发，以及大部分测试系统测试数据<br />
+                        封装下发至终端以及解析终端反馈的参数信息。
                        </p>
                     </li>
                 </ul>
@@ -243,13 +243,12 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p style="color:black;font-size:20px;">
-                  &nbsp; &nbsp;1、熟练掌握Linux，具有长期在Linux下开发的经验。<br />
+                  &nbsp; &nbsp;1、熟练掌握Linux，具有长期在Linux下开发的经验；<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发，掌握触发器、存储过程等。<br />
                   &nbsp; &nbsp;3、熟悉Git，Maven，Mina，sparkjava，ActiveJDBC，了解Tomcat，
                   &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;Jetty常见配置，对Spring也有接触，对前端技术也有一定的涉猎等。<br />
                   &nbsp; &nbsp;4、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
                   &nbsp; &nbsp;5、熟悉办公软件个各种常规操作。<br />
-                  &nbsp; &nbsp;6、学习能力强，喜欢研究新技术。<br />
                 </p>
             </div>
             <br />
