--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                   &nbsp; &nbsp;1、熟练掌握Linux，具有长期在Linux下开发的经验。<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发，掌握触发器、存储过程等。<br />
                   &nbsp; &nbsp;3、熟悉Git，Maven，Mina，sparkjava，ActiveJDBC，了解Tomcat，
-                  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;Jetty常见配置，对Spring也有接触，对前端技术也有一定的涉猎等。<br />
+                  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;Jetty常见配置，对Spring也有接触，对前端技术也有一定的涉猎等。<br />
                   &nbsp; &nbsp;4、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
                   &nbsp; &nbsp;5、熟悉办公软件个各种常规操作。<br />
                   &nbsp; &nbsp;6、学习能力强，喜欢研究新技术。<br />
