修改项目名错误已经将求职意向改为软件工程师

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li>
                         <label class="left-label">政治面貌</label><span class="label-value">中国党员</span></li>
                     <li>
-                        <label class="left-label">求职意向</label><span class="label-value">Java开发工程师<br />数据库开发工程师<br /></li>
+                        <label class="left-label">求职意向</label><span class="label-value">软件工程师</li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -216,7 +216,7 @@
                     </li>
                     <li>
                       <p style="color:black;font-size:20px;">
-                        <strong>数据单项传输系统：</strong><br />
+                        <strong>数据单向传输系统：</strong><br />
                       </p>
                       <p style="color:black;font-size:18px;">
                          负责核心业务开发：<br />
@@ -247,9 +247,10 @@
                   &nbsp; &nbsp;2、熟悉多种数据库开发，掌握触发器、存储过程等。<br />
                   &nbsp; &nbsp;3、熟悉Git，Maven，Mina，sparkjava，ActiveJDBC，了解Tomcat，
                   &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;Jetty常见配置，对Spring也有接触，对前端技术也有一定的涉猎。<br />
-                  &nbsp; &nbsp;4、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
-                  &nbsp; &nbsp;5、熟悉办公软件个各种常规操作。<br />
-                  &nbsp; &nbsp;6、学习能力强，喜欢研究新技术。<br />
+                  &nbsp; &nbsp;4、接触过unity3d，3dmax建模，修过相关课程且做过课程设计。<br />
+                  &nbsp; &nbsp;5、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
+                  &nbsp; &nbsp;6、熟悉办公软件个各种常规操作。<br />
+                  &nbsp; &nbsp;7、学习能力强，喜欢研究新技术。<br />
                 </p>
             </div>
             <br />
