删除多余括号

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                              &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;文件发送与组装。<br />
                          2、数据库传输：数据库表监控，数据库安全检查（字段黑白名单，病毒），
                              &nbsp; &nbsp; &nbsp;记录发送与组装，支持的数据库有：oracle，mysql，DB2，sqlserver，
-                              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;以及国产的达梦数据库和金仓数据库）。
+                              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;以及国产的达梦数据库和金仓数据库。
                       </p>
                     </li>
                     <li>
