将中国党员改成中共党员

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <li>
                         <label class="left-label">毕业院校</label><span class="label-value">桂林电子科技大学</span></li>
                     <li>
-                        <label class="left-label">政治面貌</label><span class="label-value">中国党员</span></li>
+                        <label class="left-label">政治面貌</label><span class="label-value">中共党员</span></li>
                     <li>
                         <label class="left-label">求职意向</label><span class="label-value">软件工程师</li>
                 </ul>
