添加出生年月，自我评价添加Hibernate，Redis，nginx认识

--- a/index.html
+++ b/index.html
@@ -40,34 +40,23 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <!-- <div class="portrait"></div> -->
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <!-- <h3>请输入图片URL地址：</h3>
-                    <br/> -->
-                    <input type="text" id="avatar-url">
-                    <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
                 <h1 id="username" >Teclan</h1>
-                <h4 id="persona-tag" >Java / 数据库 </h4>
+                <!-- <h4 id="persona-tag" >Java / 数据库 </h4> -->
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
                 <hr>
                 <ul class="info-list">
-                    <li>
-                        <label class="left-label">姓名</label><span class="label-value">谭炳健</span></li>
-                    <li>
-                        <label class="left-label">民族</label><span class="label-value">毛南族</span></li>
-                    <li>
-                        <label class="left-label">籍贯</label><span class="label-value">广西河池</span></li>
-                    <li>
-                        <label class="left-label">学历</label><span class="label-value">本科</span></li>
-                    <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">桂林电子科技大学</span></li>
-                    <li>
-                        <label class="left-label">政治面貌</label><span class="label-value">中共党员</span></li>
-                    <li>
-                        <label class="left-label">求职意向</label><span class="label-value">软件工程师</li>
+                    <li> <label class="left-label">姓名</label><span class="label-value">谭炳健</span></li>
+                    <li> <label class="left-label">民族</label><span class="label-value">毛南族</span></li>
+                    <li> <label class="left-label">籍贯</label><span class="label-value">广西河池</span></li>
+                    <li> <label class="left-label">出生年月</label><span class="label-value">1993年6月</span></li>
+                    <li> <label class="left-label">学历</label><span class="label-value">本科</span></li>
+                    <li> <label class="left-label">毕业院校</label><span class="label-value">桂林电子科技大学</span></li>
+                    <li> <label class="left-label">政治面貌</label><span class="label-value">中共党员</span></li>
+                    <li> <label class="left-label">求职意向</label><span class="label-value">软件工程师</li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -93,11 +82,11 @@
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">数据库</label>
+                        <label class="left-label">Linux</label>
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">Linux</label>
+                        <label class="left-label">数据库</label>
                         <progress value="60" max="100"></progress>
                     </li>
                     <li>
@@ -246,7 +235,8 @@
                   &nbsp; &nbsp;1、熟练掌握Linux，具有长期在Linux下开发的经验。<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发，掌握触发器、存储过程等。<br />
                   &nbsp; &nbsp;3、熟悉Git，Maven，Mina，sparkjava，ActiveJDBC，了解Tomcat，
-                  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;Jetty常见配置，对Spring也有接触，对前端技术也有一定的涉猎。<br />
+                  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;Jetty常见配置，对Spring，Hibernate，Redis，Nginx也有接触，
+                  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;对前端技术也有一定的涉猎。<br />
                   &nbsp; &nbsp;4、接触过unity3d，3dmax建模，修过相关课程且做过课程设计。<br />
                   &nbsp; &nbsp;5、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
                   &nbsp; &nbsp;6、熟悉办公软件个各种常规操作。<br />
