--- a/index.html
+++ b/index.html
@@ -165,34 +165,23 @@
                     <li>
                         <h3>北京懋光信安技术有限公司 （软件工程师）2015.7-2017.8</h3>
                     </li>
+                    <li>
+                         <h3>桂林远望智能通信科技有限公司 （研发工程师）2017.9-至今</h3>
+                    </li>
                 </ul class="experience-list">
             </div>
             <div class="project info-unit right-list">
                 <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">个人项目</span></h2>
                 <hr>
                 <ul class="experience-list">
-                    <li>
+                  <li>
                       <p style="color:black;font-size:20px;">
-                        <strong>XX市林业局防火救援系统：</strong><br />
-                      </p>
-                      <p style="color:black;font-size:20px;">
-                        &nbsp;负责需求分析，原系统数据转移，部分代码编写。
-                      </p>
-                    </li>
-                    <li>
-                      <p style="color:black;font-size:20px;">
-                        <strong>XX市国家税务局固定资产管理系统：</strong><br />
+                        <strong>桂林市国家税务局固定资产管理系统：</strong><br />
                       </p>
                       <p style="color:black;font-size:20px;">
                         &nbsp;在其原平台上开发固定资产盘点数据分析以及RFID手持设备写卡读卡盘点等功能。
-                      </p>
-                    </li>
-                    <li>
-                      <p style="color:black;font-size:20px;">
-                        <strong>XX市公交视频监控系统：</strong><br />
-                      </p>
-                      <p style="color:black;font-size:18px;">
-                        主要负责向客户演示并讲解该系统各项功能。
+                      </br>
+                        相关技术：C#，Git，Wince，RFID，VisualStudio2013等。
                       </p>
                     </li>
                     <li>
@@ -201,11 +190,13 @@
                       </p>
                       <p style="color:black;font-size:18px;">
                         负责后台接收车辆实时位置信息上报处理API以及电子围栏功能。
+                      </br>
+                      相关技术：Java，Mysql，Maven，Git，Mina，Ubuntu，SparkJava，ActiveJdbc，Guice等。
                       </p>
                     </li>
                     <li>
                       <p style="color:black;font-size:20px;">
-                        <strong>数据单向传输系统：</strong><br />
+                        <strong>数据单向传输系统（军民两个版本）：</strong><br />
                       </p>
                       <p style="color:black;font-size:18px;">
                          负责核心业务开发：<br />
@@ -215,6 +206,9 @@
                          2、数据库传输：数据库表监控，数据库安全检查（字段黑白名单，病毒），
                              &nbsp; &nbsp; &nbsp;记录发送与组装，支持的数据库有：oracle，mysql，DB2，sqlserver，
                               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;以及国产的达梦数据库和金仓数据库。
+                        </br>
+                        相关技术：Java，Maven，Git，Ubuntu，Mina，数据库，存储过程，触发器，正则，AC算法，Guice，
+                        SparkJava，ActiveJdbc，Elasticsearch等。
                       </p>
                     </li>
                     <li>
@@ -224,6 +218,19 @@
                         <p style="color:black;font-size:18px;">
                         负责WEB管理系统后台API开发，以及大部分测试系统测试数据封装下发至<br />
                         终端以及解析终端反馈的参数信息。
+                      </br>
+                      相关技术:Java，Maven，Git，Ubuntu，Mina,Guice等。
+                       </p>
+                    </li>
+                    <li>
+                      <p style="color:black;font-size:20px;">
+                      <strong>河北安防智能系统：</strong><br />
+                      </p>
+                        <p style="color:black;font-size:18px;">
+                        负责二期需求的数据库设计，大部分接口设计和编写，数据库优化，一期项目的后台BUG修复，代码整理优化,
+                        接警机协议解析封装等。
+                        </br>
+                      相关技术:Java，Maven，SVN，windows，Spring，ActiveMQ，Mysql，Elasticsearch等。
                        </p>
                     </li>
                 </ul>
@@ -234,13 +241,10 @@
                 <p style="color:black;font-size:20px;">
                   &nbsp; &nbsp;1、熟练掌握Linux，具有长期在Linux下开发的经验。<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发，掌握触发器、存储过程等。<br />
-                  &nbsp; &nbsp;3、熟悉Git，Maven，Mina，sparkjava，ActiveJDBC，了解Tomcat，
-                  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;Jetty常见配置，对Spring，Hibernate，Redis，Nginx也有接触，
-                  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;对前端技术也有一定的涉猎。<br />
+                  &nbsp; &nbsp;3、熟悉Git，SVN，Maven，Mina，sparkjava，ActiveJDBC，Spring，
+                  &nbsp; &nbsp; &nbsp; &nbsp;了解Tomcat，Jetty，对Hibernate，Redis，Nginx也有接触。</br>
                   &nbsp; &nbsp;4、接触过unity3d，3dmax建模，修过相关课程且做过课程设计。<br />
-                  &nbsp; &nbsp;5、熟悉多种开发语言，并且都能在短时间直接参与项目开发。<br />
-                  &nbsp; &nbsp;6、熟悉办公软件个各种常规操作。<br />
-                  &nbsp; &nbsp;7、学习能力强，喜欢研究新技术。<br />
+                  &nbsp; &nbsp;5、学习能力强，喜欢研究新技术。<br />
                 </p>
             </div>
             <br />
