--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <progress value="30" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">angularjs</label>
+                        <label class="left-label">Vue.js</label>
                         <progress value="30" max="100"></progress>
                     </li>
                 </ul>
@@ -227,10 +227,12 @@
                       <strong>河北安防智能系统：</strong><br />
                       </p>
                         <p style="color:black;font-size:18px;">
-                        负责二期需求的数据库设计，大部分接口设计和编写，数据库优化，一期项目的后台BUG修复，代码整理优化,
-                        接警机协议解析封装等。
+                        大部分接口设计和编写，数据库优化，数据库迁移，服务器负载状态监控，<br />
+                        Elasticsearch性能优化和状态监控，ActiveMQ性能优化和状态监控，状态数<br />
+                        据钉钉提醒，串口读写，接警机协议解析封装等。服务器集群管理，百万信<br />
+                        号查漏，关键技术方案设计（逻辑树，SQL查询优化，nginx日志切割）等。
                         </br>
-                      相关技术:Java，Maven，SVN，windows，Spring，ActiveMQ，Mysql，Elasticsearch等。
+                      相关技术:Java，Maven，SVN，Git，Redis，nginx，sigar，windows，SpringMVC，SpringBoot，ActiveMQ，Mysql，Elasticsearch等。
                        </p>
                     </li>
                 </ul>
@@ -242,9 +244,8 @@
                   &nbsp; &nbsp;1、熟练掌握Linux，具有长期在Linux下开发的经验。<br />
                   &nbsp; &nbsp;2、熟悉多种数据库开发，掌握触发器、存储过程等。<br />
                   &nbsp; &nbsp;3、熟悉Git，SVN，Maven，Mina，sparkjava，ActiveJDBC，Spring，
-                  &nbsp; &nbsp; &nbsp; &nbsp;了解Tomcat，Jetty，对Hibernate，Redis，Nginx也有接触。</br>
-                  &nbsp; &nbsp;4、接触过unity3d，3dmax建模，修过相关课程且做过课程设计。<br />
-                  &nbsp; &nbsp;5、学习能力强，喜欢研究新技术。<br />
+                  &nbsp; &nbsp; &nbsp; &nbsp;了解Tomcat，Jetty，nginx等。</br>
+                  &nbsp; &nbsp;4、学习能力强，喜欢研究新技术。<br />
                 </p>
             </div>
             <br />
