--- a/index.html
+++ b/index.html
@@ -229,11 +229,12 @@
                         <p style="color:black;font-size:18px;">
                         大部分接口设计和编写，数据库优化，数据库迁移，服务器负载状态监控，<br />
                         Elasticsearch性能优化和状态监控，ActiveMQ性能优化和状态监控，状态数<br />
-                        据钉钉提醒，短信推送，串口读写，接警机协议解析封装等。服务器集群管理，
-						百万信查漏，关键技术方案设计（逻辑树，SQL查询优化，nginx日志切割），高
-						性能数据库支持研究（Alluxio，hadoop，spark，scala,hbase）等。</br>                        						
+                        据钉钉提醒，短信推送，串口读写，接警机协议解析封装等。服务器集群管<br />
+						理，百万信查漏，关键技术方案设计（逻辑树，SQL查询优化，nginx日志切<br />
+						割），高性能数据库支持研究等。</br>                        						
                        相关技术:Java，Maven，SVN，Git，Redis，nginx，sigar，windows，</br> 
-					   SpringMVC，SpringBoot，ActiveMQ，Mysql，Elasticsearch等。
+					   SpringMVC，SpringBoot，ActiveMQ，Mysql，Elasticsearch，Alluxio，</br> 
+					   hadoop，spark，scala，hbase等。
                        </p>
                     </li>
                 </ul>
