--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li> <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li> <label class="left-label">毕业院校</label><span class="label-value">桂林电子科技大学</span></li>
                     <li> <label class="left-label">政治面貌</label><span class="label-value">中共党员</span></li>
-                    <li> <label class="left-label">求职意向</label><span class="label-value">软件工程师</li>
+                    <li> <label class="left-label">求职意向</label><span class="label-value">软件工程师/Java工程师</li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -166,8 +166,11 @@
                         <h3>北京懋光信安技术有限公司 （软件工程师）2015.7-2017.8</h3>
                     </li>
                     <li>
-                         <h3>桂林远望智能通信科技有限公司 （研发工程师）2017.9-至今</h3>
+                         <h3>桂林远望智能通信科技有限公司 （研发工程师）2017.9-2018.10</h3>
                     </li>
+                    <li>
+                        <h3>广西握握网络科技有限公司 （后端开发工程师）2018.10-至今</h3>
+                   </li>
                 </ul class="experience-list">
             </div>
             <div class="project info-unit right-list">
@@ -179,7 +182,7 @@
                         <strong>桂林市国家税务局固定资产管理系统：</strong><br />
                       </p>
                       <p style="color:black;font-size:20px;">
-                        &nbsp;在其原平台上开发固定资产盘点数据分析以及RFID手持设备写卡读卡盘点等功能。
+                        &nbsp;在其原平台上开发固定资产盘点，盘点数据分析导出以及RFID手持设备写卡读卡盘点等功能。
                       </br>
                         相关技术：C#，Git，Wince，RFID，VisualStudio2013等。
                       </p>
@@ -189,7 +192,7 @@
                         <strong>公务车辆实时监控系统：</strong><br />
                       </p>
                       <p style="color:black;font-size:18px;">
-                        负责后台接收车辆实时位置信息上报处理API以及电子围栏功能。
+                        负责后台接收车辆实时位置信息上报、实时状态信息上报的API以及电子围栏功能。
                       </br>
                       相关技术：Java，Mysql，Maven，Git，Mina，Ubuntu，SparkJava，ActiveJdbc，Guice等。
                       </p>
@@ -204,8 +207,8 @@
                              &nbsp; &nbsp; &nbsp;文件密级，文件标签，文件类型，文件大小，文件修改时间，病毒），
                              &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;文件发送与组装。<br />
                          2、数据库传输：数据库表监控，数据库安全检查（字段黑白名单，病毒），
-                             &nbsp; &nbsp; &nbsp;记录发送与组装，支持的数据库有：oracle，mysql，DB2，sqlserver，
-                              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;以及国产的达梦数据库和金仓数据库。
+                            &nbsp; &nbsp; &nbsp;记录发送与组装，支持的数据库有：oracle，mysql，DB2，sqlserver，
+                            &nbsp; &nbsp; &nbsp;以及国产的达梦数据库和金仓数据库。
                         </br>
                         相关技术：Java，Maven，Git，Ubuntu，Mina，数据库，存储过程，触发器，正则，AC算法，Guice，
                         SparkJava，ActiveJdbc，Elasticsearch等。
@@ -217,9 +220,9 @@
                       </p>
                         <p style="color:black;font-size:18px;">
                         负责WEB管理系统后台API开发，以及大部分测试系统测试数据封装下发至<br />
-                        终端以及解析终端反馈的参数信息。
+                        终端以及解析终端反馈的参数信息。车载终端定时向后台发送心跳和状态，后台解析并对应处理。
                       </br>
-                      相关技术:Java，Maven，Git，Ubuntu，Mina,Guice等。
+                      相关技术:Java，sparkJava，Maven，Git，Ubuntu，Mina，Guice等。
                        </p>
                     </li>
                     <li>
@@ -227,16 +230,47 @@
                       <strong>河北安防智能系统：</strong><br />
                       </p>
                         <p style="color:black;font-size:18px;">
-                        大部分接口设计和编写，数据库优化，数据库迁移，服务器负载状态监控，<br />
-                        Elasticsearch性能优化和状态监控，ActiveMQ性能优化和状态监控，状态数<br />
-                        据钉钉提醒，短信推送，串口读写，接警机协议解析封装等。服务器集群管<br />
-						理，百万信查漏，关键技术方案设计（逻辑树，SQL查询优化，nginx日志切<br />
-						割），高性能数据库支持研究等。</br>                        						
+                        对各种安防设备上传的信号进行解析，封装成一定格式呈现在各个系统，值<br />
+                        班人员可以对事件信号进行核对和处理。主要负责大部分接口设计和编写，<br />
+                        数据库优化，数据库迁移，服务器负载状态监控，Elasticsearch性能优化<br />
+                        和状态监控，ActiveMQ性能优化和状态监控，状态数据钉钉提醒，短信推，<br />
+                        送串口读写，接警机协议解析封装等。服务器集群管理，关键技术方案设计<br />
+                        （逻辑树，SQL查询优化，windows下nginx日志切割），高性能数据库支持研究等。</br>                        						
                        相关技术:Java，Maven，SVN，Git，Redis，nginx，sigar，windows，</br> 
 					   SpringMVC，SpringBoot，ActiveMQ，Mysql，Elasticsearch，Alluxio，</br> 
 					   hadoop，spark，scala，hbase等。
                        </p>
                     </li>
+                    <li>
+                        <p style="color:black;font-size:20px;">
+                        <strong>桂林市电信薪酬管理系统：</strong><br />
+                        </p>
+                          <p style="color:black;font-size:18px;">
+                          支持电信人员录入，批量Excel导入，薪酬项设置，月薪酬项设置，多种薪酬计算和统计，薪酬预算和奖励薪酬审批等。
+                          <br />                   						
+                         相关技术:Java，Maven，Git，Mysql。
+                         </p>
+                    </li>
+                    <li>
+                        <p style="color:black;font-size:20px;">
+                        <strong>广西政工一体化平台：</strong><br />
+                        </p>
+                          <p style="color:black;font-size:18px;">
+                          负责组织人员信息管理、设备信息管理、权限信息管理、警卫人员管理、预案管理的数据库设计和接口开发，
+                          比较麻烦的是树状结构的数据筛选。
+                          <br />                   						
+                         相关技术:Java，Maven，Git，Mysql，Elasticsearch，nginx。
+                         </p>
+                    </li>
+                    <li>
+                        <p style="color:black;font-size:20px;">
+                        <strong>建固牛小程序：</strong><br />
+                        </p>
+                        <p style="color:black;font-size:18px;">
+                         负责建固牛小程序的后端支持，负责的模块有劳务信息、金币系统、金币商城、店铺、战队等。</br>                     						
+                         相关技术:Java，eureka，Git，memcached，SpringMVC，Mybatis，ActiveMQ，Mysql8等。
+                         </p>
+                      </li>
                 </ul>
             </div>
 
