添加宇信工作记录

--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
                          <h3>桂林远望智能通信科技有限公司 （研发工程师）2017.9-2018.10</h3>
                     </li>
                     <li>
-                        <h3>广西握握网络科技有限公司 （后端开发工程师）2018.10-至今</h3>
+                        <h3>广西握握网络科技有限公司 （后端开发工程师）2018.10-2019.2</h3>
+                   </li>
+				   <li>
+                        <h3>厦门宇信鸿泰科技有限公司 （JAVA开发工程师）2019.3-至今</h3>
                    </li>
                 </ul class="experience-list">
             </div>
@@ -268,9 +271,20 @@
                         </p>
                         <p style="color:black;font-size:18px;">
                          负责建固牛小程序的后端支持，负责的模块有劳务信息、金币系统、金币商城、店铺、战队等。</br>                     						
-                         相关技术:Java，eureka，Git，memcached，SpringMVC，Mybatis，ActiveMQ，Mysql8等。
+                         相关技术:Java，eureka，Git，memcached，SpringMVC，Mybatis，
+						 ActiveMQ，Mysql8等。
                          </p>
-                      </li>
+                    </li>
+					<li>
+                        <p style="color:black;font-size:20px;">
+                        <strong>信贷系统：</strong><br />
+                        </p>
+                        <p style="color:black;font-size:18px;">
+                         负责某银行信贷系统升级的需求开发、数据迁移等。</br>
+						 相关技术:Java，JSP，eChain，EMP，Oracle，SVN，Git，Spring，
+						 Struts，Maven，Linux等。
+                         </p>
+                    </li>
                 </ul>
             </div>
 
