--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li> <label class="left-label">姓名</label><span class="label-value">谭炳健</span></li>
                     <li> <label class="left-label">民族</label><span class="label-value">毛南族</span></li>
                     <li> <label class="left-label">籍贯</label><span class="label-value">广西河池</span></li>
-                    <li> <label class="left-label">出生年月</label><span class="label-value">1993年6月</span></li>
+                    <li> <label class="left-label">出生年月</label><span class="label-value">1993年5月</span></li>
                     <li> <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li> <label class="left-label">毕业院校</label><span class="label-value">桂林电子科技大学</span></li>
                     <li> <label class="left-label">政治面貌</label><span class="label-value">中共党员</span></li>
@@ -87,31 +87,27 @@
                     </li>
                     <li>
                         <label class="left-label">数据库</label>
-                        <progress value="60" max="100"></progress>
+                        <progress value="70" max="100"></progress>
+                    </li>
+					<li>
+                        <label class="left-label">JavaScript</label>
+                        <progress value="70" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">html/css</label>
+                        <progress value="70" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">C/C++</label>
-                        <progress value="40" max="100"></progress>
+                        <progress value="50" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">C#</label>
                         <progress value="40" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">Python</label>
-                        <progress value="30" max="100"></progress>
-                    </li>
-                    <li>
-                        <label class="left-label">JavaScript</label>
-                        <progress value="30" max="100"></progress>
-                    </li>
-                    <li>
-                        <label class="left-label">html/css</label>
-                        <progress value="30" max="100"></progress>
-                    </li>
-                    <li>
                         <label class="left-label">Vue.js</label>
-                        <progress value="30" max="100"></progress>
+                        <progress value="40" max="100"></progress>
                     </li>
                 </ul>
             </div>
@@ -222,7 +218,7 @@
                       <strong>北斗导航终端测试系统：</strong><br />
                       </p>
                         <p style="color:black;font-size:18px;">
-                        负责WEB管理系统后台API开发，以及大部分测试系统测试数据封装下发至<br />
+                        负责WEB管理系统后台API开发，以及大部分系统测试数据封装下发至<br />
                         终端以及解析终端反馈的参数信息。车载终端定时向后台发送心跳和状态，后台解析并对应处理。
                       </br>
                       相关技术:Java，sparkJava，Maven，Git，Ubuntu，Mina，Guice等。
@@ -236,8 +232,8 @@
                         对各种安防设备上传的信号进行解析，封装成一定格式呈现在各个系统，值<br />
                         班人员可以对事件信号进行核对和处理。主要负责大部分接口设计和编写，<br />
                         数据库优化，数据库迁移，服务器负载状态监控，Elasticsearch性能优化<br />
-                        和状态监控，ActiveMQ性能优化和状态监控，状态数据钉钉提醒，短信推，<br />
-                        送串口读写，接警机协议解析封装等。服务器集群管理，关键技术方案设计<br />
+                        和状态监控，ActiveMQ性能优化和状态监控，状态数据钉钉提醒，短信推送，<br />
+                        串口读写，接警机协议解析封装等。服务器集群管理，关键技术方案设计<br />
                         （逻辑树，SQL查询优化，windows下nginx日志切割），高性能数据库支持研究等。</br>                        						
                        相关技术:Java，Maven，SVN，Git，Redis，nginx，sigar，windows，</br> 
 					   SpringMVC，SpringBoot，ActiveMQ，Mysql，Elasticsearch，Alluxio，</br> 
@@ -259,8 +255,7 @@
                         <strong>广西政工一体化平台：</strong><br />
                         </p>
                           <p style="color:black;font-size:18px;">
-                          负责组织人员信息管理、设备信息管理、权限信息管理、警卫人员管理、预案管理的数据库设计和接口开发，
-                          比较麻烦的是树状结构的数据筛选。
+                          负责组织人员信息管理、设备信息管理、权限信息管理、警卫人员管理、预案管理的数据库设计和接口开发，树状结构的数据筛选。
                           <br />                   						
                          相关技术:Java，Maven，Git，Mysql，Elasticsearch，nginx。
                          </p>
@@ -280,7 +275,7 @@
                         <strong>信贷系统：</strong><br />
                         </p>
                         <p style="color:black;font-size:18px;">
-                         负责某银行信贷系统升级的需求开发、数据迁移等。</br>
+                         负责某银行信贷系统新核心改造、需求开发、数据迁移、系统日常维护等。</br>
 						 相关技术:Java，JSP，eChain，EMP，Oracle，SVN，Git，Spring，
 						 Struts，Maven，Linux等。
                          </p>
