--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li> <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li> <label class="left-label">毕业院校</label><span class="label-value">桂林电子科技大学</span></li>
                     <li> <label class="left-label">政治面貌</label><span class="label-value">中共党员</span></li>
-                    <li> <label class="left-label">求职意向</label><span class="label-value">软件工程师/Java工程师</li>
+                    <li> <label class="left-label">求职意向</label><span class="label-value">信息技术岗</li>
                 </ul>
             </div>
             <div class="contact info-unit">
